@@ -12,3 +12,4 @@
  * FEATURE: Added setConnectTimeout and setReadTimeout for the Request Object
  * FIX: Fixed Evernote Api (uses GET for request and access tokens)
  * REFACTOR: URLEncoding stuff. LinkedIn specific decoder is no longer needed
+ * FEATURE: Added Google example
